Revision history for Perl extension CGI::Header.

  - The following operators are overloaded:

      ""   -> as_string
      bool -> SCALAR

  - env() is obsolete and will be removed in 0.31

  [INCOMPATIBLE CHANGES]

    - Add query() method which returns your query object.
      You can't pass your current environment (\%ENV) to new() anymore.
      Namely,

        my $header = { -type => 'text/plain' };
        my $h = CGI::Header->new( $header, \%ENV );

      become

        use CGI;
        my $query = CGI->new;
        my $h = CGI::Header->new( $header, $query );

      query() defaults to $CGI::Q. Functions exported by CGI.pm
      depends on this query object. In other words, when you choose
      the procedural interface of CGI.pm, the module behaves like
      a Singleton class.

        # $query can be omitted when you choose the procedural
        # interface of CGI.pm
        my $h = CGI::Header->new( $header );

    - as_string() become a shortcut for:

        $h->query->header( $h->header )

      and so you can't pass $eol to as_string() anymore.

   [ROADMAP]

     CGI::Header is not compatible with CGI::Simple at this time.
     This module will be adapted to CGI::Simple gradually.
     (no_cache() isn't supported by CGI.pm)

0.22  Feb 26th, 2013

  This distribution doesn't contain CGI::Header::PSGI anymore,
  which was separated into another distribution, CGI-Header-PSGI.

  The following files were removed:

    - lib/CGI/Header/PSGI.pm
    - t/31_psgi_header.t
    - t/40_psgi_header.t
    - t/41_psgi_redirect.t

  This distribution doesn't require the following modules anymore:

    - Exporter
    - CGI::PSGI (for testing)

  There are no code changes besides incrementing the version number
  since CGI-Header-0.21.

0.21  Feb 25th, 2013

  [CGI::Header::PSGI]

    - psgi_header() is compatible with CGI::Simple's header() method.
      Namely, psgi_header() can be configured by no_cache() method.