@@ -4,8 +4,7 @@ use Test::MockTime qw/set_fixed_time/;
 use CGI;
 use CGI::Cookie;
 use CGI::Header;
-#use Test::More tests => 4;
-use Test::More skip_all => 'obsolete';
+use Test::More skip_all => 'CGI::Header#as_string invokes CGI#header directly';
 
 my $now = 1349043453;
 set_fixed_time( $now );
